fix name overflow bug in product details

--- a/frontend/src/components/homepage/ProductScreen.css
+++ b/frontend/src/components/homepage/ProductScreen.css
@@ -100,3 +100,7 @@ button.small {
 .dropdown:hover .dropdown-content {
     display: block;
 }
+
+.productName{
+    word-break: break-all;
+}
